--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
-# Ignore everything
-*
-
-# But not these files...
-!.gitignore
-!.README.md
-
-# ... and folders
-!*/routes/*
-!*/views/*
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+docker-compose.override.yml
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+/.idea
+/.vscode
