--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,15 @@
-/.git
-/.github
-/app
-/bootstrap
-/config
-/database
 /node_modules
-/public/*
-!/public/css
-!/public/img
-/resources/*
-!/resources/lang
-!/resources/views
-/storage
-/tests
+/public/hot
+/public/storage
+/storage/*.key
 /vendor
-.editorconfig
 .env
-.env.example
-.gitattributes
-.gitignore
-.styleci.yml
-artisan
-composer.json
-composer.lock
-package-lock.json
-package.json
-phpunit.xml
-server.php
-webpack.mix.js
+.env.backup
+.phpunit.result.cache
+docker-compose.override.yml
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+/.idea
+/.vscode
